--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ h1 {
 #cta {
   margin-left: -200px;
   color: rgb(170, 74, 151);
-  /* animation: pulsate 7s infinite ease-in-out; */
+  /* animation: pulsate 7s infinite ease-in-out; 8888*/
 }
 
 .pulse {
