--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ h1 {
     text-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
   }
   50% {
-    text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+    text-shadow: 0 0 20px rgba(255, 23, 23, 0.253);
   }
 }
 
@@ -72,11 +72,7 @@ h1 {
   color: black;
   text-shadow: -4px 4px 8px rgba(0, 0, 0, 0.7);
 }
-#reader {
-  /* font-style: italic; */
-  /* font-weight: 600; */
-  /* font-family: Georgia, 'Times New Roman', Times, serif; */
-}
+
 ul {
   text-align: right;
   list-style-position: inside;
@@ -85,6 +81,7 @@ ul {
 li {
   background: -webkit-linear-gradient(45deg, #ff2bbc, #255c8c);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 15pt;
 }
