--- a/src/App.css
+++ b/src/App.css
@@ -64,13 +64,15 @@ h1 {
   text-align: center; /* Center align the text (optional) */
 }
 #title {
-  font-size: 50px;
+  font-size: 70px;
   font-family: 'Anton', sans-serif;
   text-align: center;
   font-style: italic;
   font-weight: 600;
   color: black;
   text-shadow: -4px 4px 8px rgba(0, 0, 0, 0.7);
+  position: relative;
+  top: -33px;
 }
 
 .list {
