--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -12,11 +12,12 @@
 }
 
 .modal-content {
-  background: white;
+  background: #ffffff0f;
   padding: 20px;
   border-radius: 5px;
   z-index: 1001;
   position: relative;
+  width: auto;
 }
 
 .modal-backdrop {
