removed the ability for unauthenticated users to create ADMIN users

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ h1 {
 }
 
 #cta {
-  margin-left: -200px;
+  margin-left: -30%;
   color: rgb(170, 74, 151);
   /* animation: pulsate 7s infinite ease-in-out; 8888*/
 }
