--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ h1 {
   margin-right: 15%;
 }
 .list li {
-  background: -webkit-linear-gradient(45deg, #ff2bbc, #255c8c);
+  background: -webkit-linear-gradient(45deg, #ff2bbc, #0c2f4e);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -151,3 +151,13 @@ nav {
 .items a:hover {
   background-color: #dddddd23;
 } */
+
+/* emojis */
+
+li span:first-child {
+  color: inherit;
+  text-decoration: none;
+  font-size: 20px; /* Adjust the font size as needed */
+  background: none; /* Remove any background color */
+  -webkit-text-fill-color: initial; /* Reset text fill color */
+}
