--- a/src/App.css
+++ b/src/App.css
@@ -43,22 +43,25 @@ h1 {
   margin-right: 15%;
 }
 .toolz {
-  background: -webkit-linear-gradient(45deg, #ff2bbc, #0c2f4e);
+  background: -webkit-linear-gradient(90deg, #ff2bbc, #0c2f4e);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 15pt;
 }
-
+body {
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(255, 0, 187, 0.288),
+    rgba(107, 119, 230, 0.709)
+  );
+}
 #bg {
   margin: 27px 3%;
   padding-top: 10px;
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(54, 54, 54, 0.37);
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 #bg::before {
   content: '';
@@ -69,12 +72,10 @@ h1 {
   bottom: 0;
   z-index: -1;
   border-radius: 10px; /* Match parent's border-radius */
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0.45),
-    /* More opaque at the sides */ rgba(220, 251, 211, 0),
-    /* More transparent at the center */ rgba(255, 255, 255, 0.041)
-      /* More opaque at the sides */
+  background-image: linear-gradient(
+    0deg,
+    rgba(255, 0, 187, 0.288),
+    rgba(107, 119, 230, 0.709)
   );
 }
 
@@ -95,7 +96,7 @@ nav {
 }
 
 .items {
-  background-color: white;
+  background-color: rgba(255, 4, 109, 0.261);
   margin-right: 10px;
 }
 .items a {
@@ -124,7 +125,7 @@ nav {
 /* emojis */
 
 li.toolz span a {
-  color: inherit;
+  color: black;
   text-decoration: none;
   font-size: 20px; /* Adjust the font size as needed */
   background: none; /* Remove any background color */
@@ -140,7 +141,7 @@ li.toolz span a {
 .tooltipimg {
   visibility: hidden;
   width: 120px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   color: #fff;
   text-align: center;
   border-radius: 6px;
